<resources>
    <string name="app_name">Exchanger</string>

    <string name="exchange_title">환율 계산</string>
    <string name="exchange_cal_title">환율 계산기</string>
    <string name="ctr_hint">국가선택</string>
    <string name="base_ctr_des">화폐에서</string>
    <string name="exchange_ctr_des">화폐로 변환합니다.</string>
    <string name="exchage_text_hint">계산할 금액을 입력하세요</string>
    <string name="result_sum">합계</string>
    <string name="result_cal">최종</string>
    <string name="des01">해당 국가 시간</string>
    <string name="des02">해당 국가 환율</string>
    <string name="des03">해당 국가 코드</string>
    <string name="hitory_title">계산 내역</string>

    <string name="intro_des">세상에서 가장\n실용적인 환율 계산기</string>
    <string name="intro_des2">3초면 충분해요</string>
    <string name="intro_login_txt">Google 계정으로 로그인</string>

    <string name="login_later">나중에 로그인</string>
    <string name="home_page">홈페이지</string>
    <string name="term_page">이용약관</string>

    <string name="save_txt">결과값 저장할까요?</string>
    <!--국가명-->
    <string name="ctr_name_kr">대한민국</string>
    <string name="ctr_name_ast">호주</string>
    <string name="ctr_name_ch">중국</string>
    <string name="ctr_name_eur">유럽연합</string>
    <string name="ctr_name_singapore">싱가폴</string>
    <string name="ctr_name_taiwan">대만</string>
    <string name="ctr_name_thailand">태국</string>
    <string name="ctr_name_usa">미국</string>
    <string name="ctr_name_vietnam">베트남</string>
    <string name="ctr_name_japan">일본</string>

    <!--통화 단위-(문자+한글 단위)-->
    <string name="unit_name_kr">₩(원)</string>
    <string name="unit_name_ast">$(호주달러)</string>
    <string name="unit_name_ch">¥(위안)</string>
    <string name="unit_name_eur">€(유로)</string>
    <string name="unit_name_singapore">$(달러)</string>
    <string name="unit_name_taiwan">元(위안)</string>
    <string name="unit_name_thailand">฿(바트)</string>
    <string name="unit_name_usa">$(달러)</string>
    <string name="unit_name_vietnam">đ(동)</string>
    <string name="unit_name_japan">円(엔화)</string>

    <!--통화 단위(한긓)-->
    <string name="kore_name_unit_kr">원</string>
    <string name="kore_name_unit_ast">호주달러</string>
    <string name="kore_name_unit_ch">위안</string>
    <string name="kore_name_unit_eur">유로</string>
    <string name="kore_name_unit_singapore">달러</string>
    <string name="kore_name_unit_taiwan">위안</string>
    <string name="kore_name_unit_thailand">바트</string>
    <string name="kore_name_unit_usa">달러</string>
    <string name="kore_name_unit_vietnam">동</string>
    <string name="kore_name_unit_japan">엔화</string>

    <!--통화 단위-->
    <string name="unit_code_kr">KRW</string>
    <string name="unit_code_ast">AUD</string>
    <string name="unit_code_ch">CNY</string>
    <string name="unit_code_eur">EUR</string>
    <string name="unit_code_singapore">SGD</string>
    <string name="unit_code_taiwan">TPE</string>
    <string name="unit_code_thailand">THB</string>
    <string name="unit_code_usa">USD</string>
    <string name="unit_code_vietnam">VTA</string>
    <string name="unit_code_japan">JPY</string>

    <string name="ctr_selector_title">통화선택</string>
    <string name="ctr_selector_title2">환전할 통화선택</string>

    <!--마이페이지-->
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_account_title">계정정보</string>
    <string name="mypage_question_title">자주묻는질문</string>
    <string name="mypage_err_title">오류신고</string>
    <string name="mypage_send_msg_title">의견접수</string>
    <string name="mypage_gongji">공지사항</string>
    <string name="mypage_term">약관 및 정책</string>
    <string name="mypage_marketing">마케팅수진정보동의</string>

    <!--admob-->
    <string name="test_id">ca-app-pub-7304776672885578~4887867420</string>
    <string name="google_admob_id">ca-app-pub-5328931313713030~3621508867</string>
    <string name="google_id2">ca-app-pub-5328931313713030/7700456304</string>

    <string name="close">닫기</string>
    <string name="go_back">뒤로</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>