<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_login_gradient"
    tools:context=".presentation.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_login_logo"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/des01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="14dp"
            android:text="@string/intro_des"
            style="@style/Text.Body16r"
            android:textColor="@color/main40"
            app:layout_constraintTop_toBottomOf="@id/imgLogo"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_marginTop="140dp"
            android:id="@+id/des02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_des2"
            android:textColor="@color/white"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:background="@drawable/bg_speak_box"
            app:layout_constraintTop_toBottomOf="@id/des01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/speakBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/sp_box_bottom"
            app:layout_constraintTop_toBottomOf="@id/des02"
            app:layout_constraintStart_toStartOf="@id/des02"
            app:layout_constraintEnd_toEndOf="@id/des02"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:background="@drawable/bg_logon_btn"
            app:layout_constraintTop_toBottomOf="@id/speakBottom">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/logoGoogle"
                    android:src="@mipmap/google_logo"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintEnd_toStartOf="@id/txtLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_login_txt"
                    style="@style/Text.Body14b"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@id/logoGoogle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/loginLater"
            android:text="@string/login_later"
            style="@style/Text.Body12b"
            android:textColor="@color/main40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/line"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/line"
            android:background="@color/white"
            android:layout_width="1dp"
            android:layout_height="16dp"
            app:layout_constraintStart_toEndOf="@id/loginLater"
            app:layout_constraintEnd_toStartOf="@id/homePage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/homePage"
            android:text="@string/home_page"
            style="@style/Text.Body12r"
            android:textColor="@color/main40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/line2"
            android:background="@color/white"
            android:layout_width="1dp"
            android:layout_height="16dp"
            app:layout_constraintStart_toEndOf="@id/homePage"
            app:layout_constraintEnd_toStartOf="@id/termPage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/termPage"
            android:text="@string/term_page"
            style="@style/Text.Body12r"
            android:textColor="@color/main40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/line2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>